--- a/index.html
+++ b/index.html
@@ -107,50 +107,94 @@ th { background:#2e7d32; color:white; }
 </section>
 
 <script>
-//=== LOGIN SIMPLE ===
-async function sha256Hex(str){const utf8=new TextEncoder().encode(str);const hash=await crypto.subtle.digest('SHA-256',utf8);return Array.from(new Uint8Array(hash)).map(b=>b.toString(16).padStart(2,'0')).join('');}
+// SHA-256
+async function sha256Hex(str){
+  const utf8=new TextEncoder().encode(str);
+  const hash=await crypto.subtle.digest('SHA-256',utf8);
+  return Array.from(new Uint8Array(hash)).map(b=>b.toString(16).padStart(2,'0')).join('');
+}
+
+// Storage
 const STORAGE_USERS='timesheet_users';
 function loadUsers(){return JSON.parse(localStorage.getItem(STORAGE_USERS)||'{}');}
-function saveUsers(u){localStorage.setItem(STORAGE_USERS,JSON.stringify(u));}
-let currentUser=null;
-let userData={timesheet:[], garaj:[], cheltuieli:[], sumaSef:0};
+function saveUsers(users){localStorage.setItem(STORAGE_USERS,JSON.stringify(users));}
 
+// Elemente
+const loginUsername=document.getElementById('login-username');
+const loginPassword=document.getElementById('login-password');
 const loginBtn=document.getElementById('login-btn');
 const showRegBtn=document.getElementById('show-register-btn');
+const registerArea=document.getElementById('register-area');
+const regUsername=document.getElementById('reg-username');
+const regPassword=document.getElementById('reg-password');
 const registerBtn=document.getElementById('register-btn');
 const cancelRegister=document.getElementById('cancel-register');
 const regMsg=document.getElementById('reg-msg');
 const notLoggedDiv=document.getElementById('not-logged');
 const loggedDiv=document.getElementById('logged');
-const apartamenteArea=document.getElementById('apartamente-area');
-const depozitArea=document.getElementById('depozit-area');
-const laverieArea=document.getElementById('laverie-area');
 const meUsernameEl=document.getElementById('me-username');
 const logoutBtn=document.getElementById('logout-btn');
 
+const apartamenteArea=document.getElementById('apartamente-area');
+const depozitArea=document.getElementById('depozit-area');
+const laverieArea=document.getElementById('laverie-area');
+
+let currentUser=null;
+let userData={timesheet:[], garaj:[], cheltuieli:[], sumaSef:0};
+
+// Register / Login
 showRegBtn.onclick=()=>registerArea.style.display='block';
-cancelRegister.onclick=()=>{registerArea.style.display='none';regMsg.textContent='';};
+cancelRegister.onclick=()=>{registerArea.style.display='none'; regMsg.textContent='';};
+
 registerBtn.onclick=async()=>{
-  const u=regUsername.value.trim(),p=regPassword.value;
-  if(!u||!p){regMsg.textContent='Completează toate câmpurile!';return;}
+  const u=regUsername.value.trim();
+  const p=regPassword.value;
+  if(!u||!p){regMsg.textContent='Completează toate câmpurile!'; return;}
   const users=loadUsers();
-  if(users[u]){regMsg.textContent='Username deja folosit!';return;}
-  users[u]={passHash:await sha256Hex(p),timesheet:[],garaj:[],cheltuieli:[],sumaSef:0};
-  saveUsers(users);regMsg.textContent='Cont creat!';registerArea.style.display='none';
+  if(users[u]){regMsg.textContent='Username deja folosit!'; return;}
+  const hash=await sha256Hex(p);
+  users[u]={passHash:hash, timesheet:[], garaj:[], cheltuieli:[], sumaSef:0};
+  saveUsers(users);
+  regMsg.textContent='Cont creat! Poți să te loghezi.';
+  registerArea.style.display='none';
+  regUsername.value=''; regPassword.value='';
 };
+
 loginBtn.onclick=async()=>{
-  const u=loginUsername.value.trim(),p=loginPassword.value;
-  if(!u||!p){alert("Completează!");return;}
+  const u=loginUsername.value.trim();
+  const p=loginPassword.value;
+  if(!u||!p){alert("Completează username și parolă!"); return;}
   const users=loadUsers();
-  if(!users[u])return alert("Utilizator inexistent!");
-  if(await sha256Hex(p)!==users[u].passHash)return alert("Parolă greșită!");
-  currentUser=u;userData=JSON.parse(JSON.stringify(users[u]));
-  localStorage.setItem('currentUser',u);onLogin();
+  if(!users[u]){alert("Utilizator inexistent!"); return;}
+  const hash=await sha256Hex(p);
+  if(hash!==users[u].passHash){alert("Parolă greșită!"); return;}
+  currentUser=u;
+  userData=JSON.parse(JSON.stringify(users[u]));
+  localStorage.setItem('currentUser', currentUser);
+  onLogin();
+  loginUsername.value=''; loginPassword.value='';
 };
-logoutBtn.onclick=()=>{currentUser=null;localStorage.removeItem('currentUser');
-  notLoggedDiv.style.display='block';loggedDiv.style.display='none';apartamenteArea.style.display='none';depozitArea.style.display='none';laverieArea.style.display='none';};
-window.onload=()=>{const saved=localStorage.getItem('currentUser');const users=loadUsers();
-  if(saved&&users[saved]){currentUser=saved;userData=users[saved];onLogin();}};
+
+logoutBtn.onclick=()=>{
+  currentUser=null;
+  localStorage.removeItem('currentUser');
+  notLoggedDiv.style.display='block';
+  loggedDiv.style.display='none';
+  apartamenteArea.style.display='none';
+  depozitArea.style.display='none';
+  laverieArea.style.display='none';
+};
+
+// On load
+window.onload=()=>{
+  const savedUser=localStorage.getItem('currentUser');
+  const users=loadUsers();
+  if(savedUser && users[savedUser]){
+    currentUser=savedUser;
+    userData=users[savedUser];
+    onLogin();
+  }
+};
 
 function onLogin(){
   notLoggedDiv.style.display='none';
@@ -161,44 +205,6 @@ function onLogin(){
   meUsernameEl.textContent=currentUser;
   renderTables();
 }
-function saveUser(){const u=loadUsers();u[currentUser]=userData;saveUsers(u);}
 
-//=== APARTAMENTE & DEPOZIT ===
-function addEntry(type){
-  const date=document.getElementById(type==='main'?'work-date':'garaj-date').value;
-  const start=document.getElementById(type==='main'?'start-hour':'garaj-start').value;
-  const end=document.getElementById(type==='main'?'end-hour':'garaj-end').value;
-  const desc=document.getElementById(type==='main'?'work-place':'garaj-desc').value.trim();
-  const rate=parseFloat(document.getElementById(type==='main'?'hourly-rate':'garaj-rate').value)||0;
-  if(!date||!start||!end||!desc||!rate){alert("Completează toate câmpurile!");return;}
-  const diff=(new Date(`${date}T${end}`)-new Date(`${date}T${start}`))/3600000;
-  const hours=diff>0?diff:0;const total=(hours*rate).toFixed(2);
-  const entry={date,start,end,hours:hours.toFixed(2),desc,rate,total};
-  if(type==='main')userData.timesheet.push(entry);else userData.garaj.push(entry);
-  saveUser();renderTables();
-}
-function renderTables(){
-  const makeTable=(data,tbodyId,totalId,title)=>{
-    const tbody=document.getElementById(tbodyId);tbody.innerHTML='';let sum=0;
-    data.forEach((e,i)=>{const tr=document.createElement('tr');
-      tr.innerHTML=`<td>${i+1}</td><td>${e.date}</td><td>${e.start}</td><td>${e.end}</td><td>${e.hours}</td><td>${e.desc}</td><td>${e.rate}</td><td>${e.total}</td>
-      <td><button class='delete-btn' onclick="del('${tbodyId}',${i})">X</button></td>`;
-      tbody.appendChild(tr);sum+=parseFloat(e.total);});
-    document.getElementById(totalId).textContent=`Total ${title}: ${sum.toFixed(2)} €`;
-  };
-  makeTable(userData.timesheet,'timesheet-table','total','Apartamente');
-  makeTable(userData.garaj,'garaj-table','garaj-total','Depozit');
-  renderLaverie();
-}
-function del(tbody,i){
-  if(tbody==='timesheet-table')userData.timesheet.splice(i,1);
-  else if(tbody==='garaj-table')userData.garaj.splice(i,1);
-  else userData.cheltuieli.splice(i,1);
-  saveUser();renderTables();
-}
-
-//=== LAVERIE ===
-function adaugaSuma(){const s=parseFloat(document.getElementById('suma-sef').value)||0;userData.sumaSef+=s;saveUser();renderLaverie();}
-function adaugaCheltuiala(){
-  const s=parseFloat(document.getElementById('cheltuiala').value)||0;const d=document.getElementById('descriere').value.trim();
-  if(!s||!d){alert("Completează!");return;}userData.cheltuieli.push({descr
+// Salvează date
+function saveUser(){const users=loadUsers(); users[currentUser]=userData; saveUsers(users);}
